# kuku

./: .dockerignore  .gitignore  .oxlintrc.json  Cargo.toml  Makefile  README.md  README_ko.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: windows-desktop.yml
.moon/: toolchains.yml  workspace.yml
apps/desktop/: .env.example  .oxfmtrc.json  .oxlintrc.json  moon.yml  package.json  vite.config.ts  vitest.config.ts  world-preview.html
apps/desktop/src/: app.tsx  env.d.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.development.conf.json  tauri.preview.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/dev/: icon.icns
apps/desktop/src-tauri/icons/release/: icon.icns
apps/desktop/src-tauri/src/: app_settings.rs  auth.rs  auth_commands.rs  contract_client.rs  lib.rs  models.rs  plugin_fs.rs  plugin_installer.rs  plugin_settings.rs  plugin_sidecar.rs  voxel_assets.rs
apps/desktop/src-tauri/src/ai_host/: desktop_host.rs
apps/desktop/src-tauri/src/ai_tools/: document_tools.rs  file_tools.rs  mod.rs  project_context.rs  project_memory_proposal.rs  project_memory_tools.rs  project_model.rs  project_model_tests.rs  project_proposal.rs  project_tool_common.rs  project_tools.rs  search_tools.rs  tool_ids.rs
apps/desktop/src-tauri/src/knowledge/: apply.rs  commands.rs  decision_document.rs  markdown.rs  mod.rs  models.rs  proposal.rs  protected_paths.rs  read.rs  search.rs  service.rs
apps/desktop/src-tauri/src/search/: db.rs  mod.rs  writer.rs
apps/desktop/src-tauri/src/sync/: account_keys.rs  applier.rs  automerge_experimental.rs  automerge_import.rs  automerge_projection.rs  automerge_review.rs  autosync.rs  checkpoint.rs  client.rs  commands.rs  crypto.rs  db.rs  errors.rs  keys.rs  merge.rs  mod.rs  packer.rs  planner.rs  scanner.rs  transfer.rs  types.rs  vault_config.rs
apps/desktop/src-tauri/src/vault/: commands.rs  mod.rs  mutation_sync.rs  watcher.rs
apps/desktop/src-tauri/windows/: AppxManifest.xml  nsis-hooks.nsh
apps/desktop/src/components/: scroll_area.tsx
apps/desktop/src/i18n/: index.ts  keys.ts
apps/desktop/src/keybindings/: command_registry.ts  index.ts  keybinding_manager.ts  keyboard_context.ts
apps/desktop/src/lib/: app_settings.ts  font_fallback.ts  fonts.ts  platform.ts  use_theme.ts  vault_drag.ts  vault_fs.ts  vault_path.ts  vault_types.ts
apps/desktop/src/plugins/: anchor_editors.ts  anchor_handlers.ts  bootstrap.ts  commands.test.ts  commands.ts  context.ts  context_keys.ts  events.ts  focus_zone.ts  font_registry.ts  markdown_service.ts  registry.ts  services.ts  settings_store.ts  slots.tsx  theme_registry.ts  types.ts
apps/desktop/src/shims/: three_webgpu.ts
apps/desktop/src/stores/: app_reset.ts  demo_vault_samples.test.ts  demo_vault_samples.ts  diff_store.ts  editor.ts  file_tabs_reconcile.ts  files.ts  layout.ts  settings.ts  tab_path_updates.ts  theme.ts  typing.ts  updater.ts  vault.ts  vault_drag.ts  vault_status.ts  vault_tree.ts
apps/desktop/src/styles/: ai_chat.css  ai_chat_transcript.css  editor.css  font.css  resize_grip.css  scrollbar.css  wikilink.css
apps/server/: .air.toml  .env.example  .gitignore  .golangci.yaml  go.mod  go.sum  moon.yml  package.json  sqlc.yaml
apps/server/cmd/server/: main.go
apps/server/internal/ai/: handler.go  handler_test.go  service.go  service_test.go
apps/server/internal/auth/: context.go  cookies.go  email.go  email_ses.go  util.go  (+7 more)
apps/server/logger/: logger.go
apps/server/test/: docker-compose.test.yml  e2ee-sync-dogfood.md
apps/server/tools/: air.mod  air.sum  golangci-lint.mod  sqlc.mod
apps/web/: astro.config.mjs  moon.yml  package.json  vitest.config.ts
apps/web/scripts/: update_prod_release_config.mjs
assets/: test_en.md  test_ko.md
assets/unicode-range/: README.md  emoji-range.css  font_range.py  generate_range.py
assets/voxel/: README.md
crates/kuku-ai/: Cargo.toml  README.md  build.rs  moon.yml
crates/kuku-ai/permissions/: default.toml
crates/kuku-ai/permissions/autogenerated/: reference.md
crates/kuku-ai/permissions/autogenerated/commands/: ai_close_session.toml  ai_list_agents.toml  ai_list_chat_sessions.toml  ai_list_sessions.toml  ai_reset_state.toml  ai_restore_session.toml  ai_save_chat_sessions.toml
crates/kuku-ai/permissions/schemas/: schema.json
crates/kuku-ai/src/: commands.rs  contract.rs  error.rs  host.rs  lib.rs  prompts.rs  session.rs  state.rs  types.rs
crates/kuku-ai/src/agent_runtime/: acp.rs  events.rs  mod.rs  native.rs  store.rs
crates/kuku-ai/src/mcp_bridge/: mod.rs
crates/kuku-ai/src/provider/: codex_app_server.rs  gemini.rs  mod.rs  remote.rs
crates/kuku-ai/src/tools/: descriptor.rs  mod.rs  proxy.rs
crates/kuku-contract/: Cargo.toml  moon.yml
crates/kuku-contract/src/: lib.rs
crates/kuku-indexer/: moon.yml
crates/kuku-sync-core/: Cargo.toml
crates/kuku-sync-core/src/: error.rs  import.rs  lib.rs  materialize.rs  model.rs  object.rs  path.rs  projection.rs  recovery.rs  review.rs  scheduler.rs  snapshot.rs  store.rs  sync_once.rs  text_doc.rs  vault.rs
crates/tauri-plugin-ai/src/: host.rs  session.rs
docs/: development.md  development_ko.md  windows-store.md
docs/assets/: readme-social-card.html
docs/superpowers/plans/: 2026-05-22-kuku-agent-runtime.md  2026-06-09-ai-widgets.md
docs/superpowers/specs/: 2026-06-09-ai-widgets-design.md
infra/docker/local/: README.md  env.example
infra/docker/local-test/: README.md  docker-compose.yml  env.example
infra/docker/preview/: env.example
infra/docker/prod/: docker-compose.yml  env.example
infra/docker/web/: nginx.conf
patches/: three-forcegraph.patch
plugins/gbrain/: .kuku-plugin.json
plugins/gbrain/skills/: RESOLVER.md  manifest.json
plugins/llmwiki/: .kuku-plugin.json
plugins/llmwiki/skills/: SCHEMA.md
scripts/: optimize-voxel-assets.sh  release-preview.sh  release-prod-web.sh  release-windows-store-msix.ps1  release-windows.ps1  release.sh  setup-windows-build-prereqs.ps1
(+465 files in other folders)
