[package]
name = "kuku-contract"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "kuku_contract"
path = "src/lib.rs"

[dependencies]
buffa = { version = "0.3", features = ["json"] }
buffa-types = { version = "0.3", features = ["json"] }
connectrpc = { version = "0.3", default-features = false, features = ["client", "client-tls"] }
futures = "0.3"
http-body = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
