[package]
name = "kuku-sync-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "kuku_sync_core"
path = "src/lib.rs"

[dependencies]
automerge = "0.10.0"
blake3 = "1"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"
