[package]
name = "kuku-app"
version = "0.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-ai = { path = "../../../crates/tauri-plugin-ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tokio = { version = "1", features = ["fs", "rt", "time"] }
blake3 = "1"
notify = "8.0"
parking_lot = "0.12"
human-sort = "0.2.2"
kuku-search-core = { path = "../../../crates/kuku-search-core" }
regex = "1"
async-trait = "0.1"
keyring = { version = "3.6.3", features = ["apple-native"] }
