[package]
name = "kuku-app"
version = "0.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
kuku-ai = { path = "../../../crates/kuku-ai" }
kuku-contract = { path = "../../../crates/kuku-contract" }
connectrpc = { version = "0.3", default-features = false, features = ["client", "client-tls"] }
http = "1"
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "time"] }
blake3 = "1"
notify = "8.0"
parking_lot = "0.12"
kuku-indexer = { path = "../../../crates/kuku-indexer" }
regex = "1"
async-trait = "0.1"
keyring = { version = "3.6.3", features = ["apple-native"] }
trash = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# Keep DevTools opt-in for release builds. Preview builds forward this
# flag via `tauri build --features devtools`; prod bundles leave it off
# so the inspector isn't shipped to end users.
devtools = ["tauri/devtools"]
